--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                       <option value="Parent">Parent</option>
                       <option value="Academic">Academic</option>
                       <option value="Investor">Investor</option>
+                      <option value="Other">Other</option>
                     </select>
 
 
@@ -94,10 +95,10 @@
                      <div class="message__body">
                        <div class="message__in">
                          <div class="message__bubble">
-                           <div class="message__bubble_text"><b>Success!</b> Welcome aboard!<img class="emoji  " src="img/emoji/laughing.png" alt="Emoji"/>Now go and confirm your subscription pls.
+                           <div class="message__bubble_text"><b>Success!</b> Welcome aboard!<img class="emoji  " src="img/emoji/laughing.png" alt="Emoji"/>
                            </div>
                          </div>
-                         <div class="message__bubble">
+                        <!-- <div class="message__bubble">
                            <div class="message__bubble_text">BTW, we post our happy faces on Instagram and Twitter. Welcome:</div>
                          </div>
                          <div class="message__bubble">
@@ -106,15 +107,15 @@
                          <div class="message__bubble">
                            <div class="message__bubble_text"><a class="message__bubble_link" href="https://twitter.com/unicornplatform/">https://twitter.com/unicornplatform</a></div>
                          </div>
-                       </div>
-                       <div class="message__out">
+                       </div>-->
+                      <!-- <div class="message__out">
                          <div class="message__out_box">
                            <div class="message__bubble">
                              <!--div class="message__bubble_text message__bubble_text--out js-reaction-text">Coming!</div-->
-                           </div>
+                           <!--</div>
                          </div>
-                       </div>
-                     </div>
+                       </div>-->
+                  <!--   </div>
                      <div class="message__reply_box">
                        <div class="message__reply_word">Reply</div>
                        <div class="message__options">
@@ -125,7 +126,7 @@
                          <div class="message__option">
                            <button class="button js-react-on-message button--emerald-bg " type="submit"><span class="button__text">Got you there!</span>
                            </button>
-                         </div>
+                         </div>-->
                        </div>
                      </div>
                    </div>
@@ -139,13 +140,13 @@
                            <div class="message__bubble_text"><b>Error.</b> Your form has not been submitted<img class="emoji  " src="img/emoji/cold_sweat.png" alt="Emoji"/>
                            </div>
                          </div>
-                         <div class="message__bubble">
+                        <!-- <div class="message__bubble">
                            <div class="message__bubble_text">This is what the server says:
                              <div class="message__bubble_error js-error-message-text">There must be an @ at the beginning.</div>
                            </div>
                          </div>
                        </div>
-                       <div class="message__out">
+                    <!--   <div class="message__out">
                          <div class="message__out_box">
                            <div class="message__bubble">
                              <div class="message__bubble_text message__bubble_text--out js-reaction-text">I will retry</div>
@@ -156,14 +157,14 @@
                      <div class="message__reply_box">
                        <div class="message__reply_word">Reply</div>
                        <div class="message__options">
-                         <div class="message__option">
+                      <!--   <div class="message__option">
                            <button class="button js-react-on-message button--ruby-bg " type="submit"><span class="button__text">Uh oh!</span>
                            </button>
                          </div>
                          <div class="message__option">
                            <button class="button js-react-on-message button--ruby-bg " type="submit"><span class="button__text">I will retry</span>
                            </button>
-                         </div>
+                         </div>-->
                        </div>
                      </div>
                    </div>
