--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            <div class="mockup__speaker"></div>
            <div class="mockup__screen">
              <!--Recommended screenshot size: width: 750, height: 1334. Or any other sizes at this ratio (0,562).-->
-             <div class="mockup__screenshot" style="background-image: url(https://i.imgur.com/dPhnB5N.png)"></div>
+             <div class="mockup__screenshot" style="background-image: url(https://media.giphy.com/media/l9VRS61TWLAeRizn82/giphy.gif)"></div>
            </div>
            <div class="mockup__button"></div>
          </div>
