--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
   </div>
   <div class="container">
     <ul class="faq-02__button_box">
-      <li class="faq-02__button"><a class="button   button--midnight-outline " href="javascript:void(0);" target="_blank"><span>Email Support</span></a>
+      <li class="faq-02__button"><a class="button   button--midnight-outline " href="mailto:hello@faf-app.me" target="_top"><span>Email Support</span></a>
       </li>
       <li class="faq-02__button"><a class="button   button--midnight-outline " href="javascript:void(0);" target="_blank"><span>Live Support</span></a>
       </li>
