--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                    <select name="MMERGE7" style=" color: grey">
                        <option value="">Select Occupation</option>
                       <option value="Student (University)">Student (University)</option>
-                      <option value="Student (School)">Student (School)</option>
+                      <option value="Student (High School)">Student (High School)</option>
                       <option value="Parent">Parent</option>
                       <option value="Academic">Academic</option>
                       <option value="Investor">Investor</option>
@@ -701,8 +701,8 @@
     <ul class="faq-02__button_box">
       <li class="faq-02__button"><a class="button   button--midnight-outline " href="mailto:hello@faf-app.me" target="_top"><span>Email Support</span></a>
       </li>
-      <li class="faq-02__button"><a class="button   button--midnight-outline " href="javascript:void(0);" target="_blank"><span>Live Support</span></a>
-      </li>
+     <!--    <li class="faq-02__button"><a class="button   button--midnight-outline " href="javascript:void(0);" target="_blank"><span>Live Support</span></a>
+  </li>-->
     </ul>
   </div>
 </div>
