--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="header-54__wrapper">
     <div class="header-54__left">
 <!-- INSERT APP LOGO HERE -->
-<div class="header-54__left_content">    <a class="header-54__logo_link" href="javascript:void(0);" target="_blank"><img class="header-54__logo_img" src="https://i.imgur.com/LBNfK4w.png"/></a>
-       <h1 class="heading header-54__heading">FAF - Financial Advice for the Future</h1>
-       <p class="header-54__text">FAF is a mobile application that employs Open Banking to raise financial awareness via advice and personalised discounts based on transaction history. Interested? Register your interest below</p>
+<div class="header-54__left_content">    <a class="header-54__logo_link" href="javascript:void(0);" target="_blank"><img class="header-54__logo_img" src="https://i.imgur.com/nuE4Hua.png"/></a>
+       <h1 class="heading header-54__heading"faff - Financial Advice for the Future</h1>
+       <p class="header-54__text">faff is a mobile application that employs Open Banking to raise financial awareness via advice and personalised discounts based on transaction history. Interested? Register your interest below</p>
        <div class="header-54__buttons">
          <!-- START OF: mailchimp form =====-->
          <!-- If you need help with setting up the MailChimp form you can check the handy guides: https://unicornplatform.com/blog/category/guides-%F0%9F%8D%93/-->
@@ -523,10 +523,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="features-01">
   <div class="container container--small">
     <div class="features-01__title_box">
-      <div class="subheading">Explore the benefits of FAF</div>
-      <h2 class="heading heading--accent">Devise a better financial future with FAF!<img class="emoji  " src="img/emoji/bicep.png" alt="Emoji"/>
+      <div class="subheading">Explore the benefits of faff</div>
+      <h2 class="heading heading--accent">Devise a better financial future with faff!<img class="emoji  " src="img/emoji/bicep.png" alt="Emoji"/>
       </h2>
-      <p>Hop on the financial literacy train with FAF's innovative solution that supports you through your journey of entering the personal finance world. Get discounts, talk to an expert, track your spending, FAF does it all! </p>
+      <p>Hop on the financial literacy train with faff's innovative solution that supports you through your journey of entering the personal finance world. Get discounts, talk to an expert, track your spending, faff does it all! </p>
     </div>
   </div>
   <div class="container">
@@ -549,7 +549,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="feature">
           <h3 class="feature__title"><img class="feature__icon" src="img/icons/abstract_icons/abstract-icon-3.svg"/><span class="feature__title_text">Localised Geographic Discounts</span>
           </h3>
-          <p class="feature__content"><span>Want some quick discounts? FAF can help! We use your location data and combined with your transaction history, we offer you personalised local discounts via our partner merchants. We also partner with schools for discounts for children to incentivise 'learning about money' at an early age and develop healthy spending habits. </span></p> <!--<a class="feature__link" href="javascript:void(0);" target="_blank"><span>Try it</span><span class="icon"><svg viewBox="0 0 13 10" xmlns="http://www.w3.org/2000/svg"><path d="M12.823 4.164L8.954.182a.592.592 0 0 0-.854 0 .635.635 0 0 0 0 .88l2.836 2.92H.604A.614.614 0 0 0 0 4.604c0 .344.27.622.604.622h10.332L8.1 8.146a.635.635 0 0 0 0 .88.594.594 0 0 0 .854 0l3.869-3.982a.635.635 0 0 0 0-.88z" fill-rule="nonzero" fill="#00396B"/></svg></span></a> -->
+          <p class="feature__content"><span>Want some quick discounts? faff can help! We use your location data and combined with your transaction history, we offer you personalised local discounts via our partner merchants. We also partner with schools for discounts for children to incentivise 'learning about money' at an early age and develop healthy spending habits. </span></p> <!--<a class="feature__link" href="javascript:void(0);" target="_blank"><span>Try it</span><span class="icon"><svg viewBox="0 0 13 10" xmlns="http://www.w3.org/2000/svg"><path d="M12.823 4.164L8.954.182a.592.592 0 0 0-.854 0 .635.635 0 0 0 0 .88l2.836 2.92H.604A.614.614 0 0 0 0 4.604c0 .344.27.622.604.622h10.332L8.1 8.146a.635.635 0 0 0 0 .88.594.594 0 0 0 .854 0l3.869-3.982a.635.635 0 0 0 0-.88z" fill-rule="nonzero" fill="#00396B"/></svg></span></a> -->
         </div>
       </li>
       <li class="features-01__item">
@@ -849,10 +849,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="text--03__wrapper">
       <div class="text--03__left">
-        <div class="text--03__big_text">Do you want to earn discounts while learning about money? <br> <br> Then sign up to FAF! FAF is an educational app that gives you discounts while helping you become financially literate. </div>
+        <div class="text--03__big_text">Do you want to earn discounts while learning about money? <br> <br> Then sign up to 
+         faff! faff is an educational app that gives you discounts while helping you become financially literate. </div>
       </div>
       <div class="text--03__right">
-        <p> <B> FAF - a mobile app </B> available across platforms, aims to attract 13-23 year olds and carry them on a journey of financial awareness, helping them understand their finances all the way into adulthood. To raise financial awareness, the application includes two core features. </p>
+        <p> <B> faff - a mobile app </B> available across platforms, aims to attract 13-23 year olds and carry them on a journey of financial awareness, helping them understand their finances all the way into adulthood. To raise financial awareness, the application includes two core features. </p>
         <p> <B>Localised Geographic Discounts (LGD): </B> that incentivises ‘learning about money’ by using your transactional and location data to offer personalised local discounts and </p>
         <p> <B>AI generated financial advice (AFA): </B> AFA is a chatbot that answers questions on financial products and gives tailored advice to suit your needs. It also uses AI to generate unique insight on alternate uses of money. Eg: “Putting your £3 daily spend at Costa into ISAs will leave you with £1150 after one year”.</p>
       </div>
@@ -881,31 +882,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <ul class="slider__box js-slider" data-slider-config="{&quot;dots&quot;: true, &quot;infinite&quot;: true, &quot;speed&quot;: 300, &quot;fade&quot;: false, &quot;cssEase&quot;: &quot;ease&quot;, &quot;adaptiveHeight&quot;: false, &quot;lazyLoad&quot;: &quot;ondemand&quot;}">
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo" src="img/logos/companies/intercom.svg"/>-->
-            <p class="testimonials-01__text"> “The AFA in the FAF app helped me understand what an ISA was through a simple conversation and I had opened one by the end of the week!”</p>
+            <p class="testimonials-01__text"> “The AFA in the faff app helped me understand what an ISA was through a simple conversation and I had opened one by the end of the week!”</p>
             <div class="testimonials-01__author">James,<br/>Aged 22</div>
           </div>
         </li>
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo" src="img/logos/companies/instacart.svg"/>-->
-            <p class="testimonials-01__text">“As a coffee lover, FAF changed my life. Their discounts helped me take the leap to try a new local coffee place and I fell in love, still using them to this day! Thank you FAF.”</p>
+            <p class="testimonials-01__text">“As a coffee lover, faff changed my life. Their discounts helped me take the leap to try a new local coffee place and I fell in love, still using them to this day! Thank you faff.”</p>
             <div class="testimonials-01__author">Rafael,<br/>Aged 26</div>
           </div>
         </li>
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo testimonials-01__logo--round" src="https://unicornplatform.com/app/img/photos/team-2/via-talen-de-st-croix.jpg"/>-->
-            <p class="testimonials-01__text">“Using FAF at school gives me discount on food and I have more money left every month.”</p>
+            <p class="testimonials-01__text">“Using faff at school gives me discount on food and I have more money left every month.”</p>
             <div class="testimonials-01__author">Alya,<br/>Aged 15</div>
           </div>
         </li>
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo testimonials-01__logo--round" src="https://unicornplatform.com/app/img/photos/team-2/via-talen-de-st-croix.jpg"/>-->
-            <p class="testimonials-01__text">“FAF put me years ahead of my colleagues in financial literacy and I have already made thousands from the compound interest from my savings. I expect to make tens or hundreds of thousands in the next 20 years and will help me retire by 55.”</p>
+            <p class="testimonials-01__text">“faff put me years ahead of my colleagues in financial literacy and I have already made thousands from the compound interest from my savings. I expect to make tens or hundreds of thousands in the next 20 years and will help me retire by 55.”</p>
             <div class="testimonials-01__author">Debra,<br/>Aged 31</div>
           </div>
         </li>
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo testimonials-01__logo--round" src="https://unicornplatform.com/app/img/photos/team-2/via-talen-de-st-croix.jpg"/>-->
-            <p class="testimonials-01__text"> “My Johnny was going off the rails but we were able to set him straight once we were able to track his spending via FAF, he is now off to Imperial to study history. Paul and I are happy because we don’t have any concerns about his independence or money management skills.”</p>
+            <p class="testimonials-01__text"> “My Johnny was going off the rails but we were able to set him straight once we were able to track his spending via faff, he is now off to Imperial to study history. Paul and I are happy because we don’t have any concerns about his independence or money management skills.”</p>
             <div class="testimonials-01__author">Paula,<br/>Aged 45</div>
           </div>
         </li>
@@ -934,7 +935,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </li>
       <li class="faq-02__item"><img class="faq-02__icon" src="img/icons/help.svg"/>
-        <h2 class="faq-02__question_heading">What's the price for using FAF?</h2>
+        <h2 class="faq-02__question_heading">What's the price for using faff?</h2>
         <div class="faq-02__answer">
           <p>Zero. We offer a free service to our customers as we are a social enterprise aimed at education, so we do not make money off our customers. </p>
         </div>
@@ -942,23 +943,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </ul>
     <ul class="faq-02__list">
       <li class="faq-02__item"><img class="faq-02__icon" src="img/icons/help.svg"/>
-        <h2 class="faq-02__question_heading">How does FAF make money?</h2>
+        <h2 class="faq-02__question_heading">How does faff make money?</h2>
         <div class="faq-02__answer">
           <p>We do not make money from our customers. We cover costs by partnering with retailers who want to offer discounts on our platform, as well as by recommending financial products from providers for a commission fee. We do not have any plans as of now to start charging customers either. </p>
         </div>
       </li>
       <li class="faq-02__item"><img class="faq-02__icon" src="img/icons/help.svg"/>
-        <h2 class="faq-02__question_heading">Does FAF help me invest my money?</h2>
+        <h2 class="faq-02__question_heading">Does faff help me invest my money?</h2>
         <div class="faq-02__answer">
-          <p>No, FAF gives you advice on how to save your money using financial products and answers related questions, however, it is completely up to the customer to put our advice into action. </p>
+          <p>No, faff gives you advice on how to save your money using financial products and answers related questions, however, it is completely up to the customer to put our advice into action. </p>
         </div>
       </li>
     </ul>
     <ul class="faq-02__list">
       <li class="faq-02__item"><img class="faq-02__icon" src="img/icons/help.svg"/>
-        <h2 class="faq-02__question_heading">Can I add two of my bank accounts on FAF?</h2>
+        <h2 class="faq-02__question_heading">Can I add two of my bank accounts on faff?</h2>
         <div class="faq-02__answer">
-          <p>At the moment, we only allow you to add bank accounts to FAF, however you can add as many bank accounts as you want. </p>
+          <p>At the moment, we only allow you to add bank accounts to faff, however you can add as many bank accounts as you want. </p>
         </div>
       </li>
 
@@ -1002,7 +1003,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!--<div class="footer-02">
   <div class="container">
     <!--<div class="footer-02__wrapper">
-      <div class="footer-02__text">&copy; 2019&nbsp;<a class="footer-02__link" href="javascript:void(0);">FAF</a>.
+      <div class="footer-02__text">&copy; 2019&nbsp;<a class="footer-02__link" href="javascript:void(0);">faff</a>.
         All rights reserved.
       </div> -->
     <!--  <div class="social-buttons">
