--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="subheading">Explore the benefits of FAF</div>
       <h2 class="heading heading--accent">Devise a better financial future with faff!<img class="emoji  " src="img/emoji/bicep.png" alt="Emoji"/>
       </h2>
-      <p>Hop on the financial literacy train with FAF's innovative solution that supports you through your journey of entering the personal finance world. Get discounts, talk to an expert, track your spending, faff does it all! </p>
+      <p>Hop on the financial literacy train with faff's innovative solution that supports you through your journey of entering the personal finance world. Get discounts, talk to an expert, track your spending, faff does it all! </p>
     </div>
   </div>
   <div class="container">
