--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="features-01">
   <div class="container container--small">
     <div class="features-01__title_box">
-      <div class="subheading">Explore the benefits of FAF</div>
+      <div class="subheading">Explore the benefits of faff</div>
       <h2 class="heading heading--accent">Devise a better financial future with faff!<img class="emoji  " src="img/emoji/bicep.png" alt="Emoji"/>
       </h2>
       <p>Hop on the financial literacy train with faff's innovative solution that supports you through your journey of entering the personal finance world. Get discounts, talk to an expert, track your spending, faff does it all! </p>
@@ -905,7 +905,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
         <li class="slider__item">
           <div class="testimonials-01__item"><!--<img class="testimonials-01__logo testimonials-01__logo--round" src="https://unicornplatform.com/app/img/photos/team-2/via-talen-de-st-croix.jpg"/>-->
-            <p class="testimonials-01__text"> “My Johnny was going off the rails but we were able to set him straight once we were able to track his spending via FAF, he is now off to Imperial to study history. Paul and I are happy because we don’t have any concerns about his independence or money management skills.”</p>
+            <p class="testimonials-01__text"> “My Johnny was going off the rails but we were able to set him straight once we were able to track his spending via faff, he is now off to Imperial to study history. Paul and I are happy because we don’t have any concerns about his independence or money management skills.”</p>
             <div class="testimonials-01__author">Paula,<br/>Aged 45</div>
           </div>
         </li>
@@ -958,7 +958,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <li class="faq-02__item"><img class="faq-02__icon" src="img/icons/help.svg"/>
         <h2 class="faq-02__question_heading">Can I add two of my bank accounts on faff?</h2>
         <div class="faq-02__answer">
-          <p>At the moment, we only allow you to add bank accounts to FAF, however you can add as many bank accounts as you want. </p>
+          <p>At the moment, we only allow you to add bank accounts to faff, however you can add as many bank accounts as you want. </p>
         </div>
       </li>
 
